--- a/namu-darbas.html
+++ b/namu-darbas.html
@@ -4,92 +4,132 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="Alkoholiniu, bei nealkoholiniu kokteiliu receptai">
+    <style>
+        body {background-color: skyblue;}
+      </style>
+    <title>Kokteiliai</title>
 </head>
 <body>
-    <h1>
-        Kokteiliai
-    </h1>
-    <table style="width: 100%;">
-    <tr>
-        <th>
-            Pavadinimas
-        </th>
-        <th>
-            Sudetis
-        </th>
-        <th>
-            Taure
-        </th>
-    </tr>
-    <tr>
-        <td>
-            <i>"Whiskey sour"</i>
-        </td>
-        <td>
-            <small>
-            Viskis 40ml<br>
-            Cukraus sirupas 20ml<br>
-            Citrinu sultys 30ml<br>
-        </small>
-        </td>
-        <td>
-            "Hobstar"
-        </td>
-    </tr>
-    <tr>
-        <td>
-            <i>"Old fashioned"</i>
-        </td>
-        <td>
-            <small>
-            Viskis 60ml<br>
-            Cukraus saukstelis<br>
-            Angostura bitters 4 dash'ai<br>
-        </small>
-        </td>
-        <td>
-            "Hobstar"        
-        </td>
-    </tr>
-    <tr>
-        <td>
-            <i>"Negroni"</i>
-        </td>
-        <td>
-            <small>
-            Dzinas 25ml<br>
-            Martini rosso 25ml<br>
-            Campari 25ml<br>
-        </small>
-        </td>
-        <td>
-            "Hobstar"
-        </td>
-    </tr>
-    </table>
-    <h2>
-       <strong>"Whiskey sour"</strong><br>
-       <img src="whiskey sour.jpg" alt="Whiskey sour" width="150" height="150">
-    </h2>
-    <h2>
-        <strong>"Old fashioned"</strong><br>
-        <img src="old-fashioned.jpg" alt="Old Fashioned" width="150" height="150">
-    </h2>
-    <h2>
-        <strong>"Negroni"</strong><br>
-        <img src="Negroni.jpg" alt="Negroni" width="150" height="150">
-    </h2>
+    <header id="Kokteiliai">
+        <h1>
+            Kokteiliai
+        </h1>
+        <p>
+            Oficialus "kokteilio" apibrėžimas pagal šiuolaikinį "Merriam-Webster Dictionary" 
+            yra "ledinis gėrimas vyno arba distiliuotų alkoholinių gėrimų, sumaišytų su 
+            kvapiosiomis medžiagomis". Tai gana plati apibrėžtis, tačiau atspindi šiuolaikinę 
+            praktiką, susijusią su beveik kokybišku gėrimu kaip kokteilis.
+        </p>
+    </header>
+    <section id="Viskio_kokteiliai">
+        <h2>
+            Viskio kokteiliu pavyzdiai
+        </h2>  
+        <table style="width: 25%;">
+        <tr>
+            <th>
+                Pavadinimas
+            </th>
+            <th>
+                Sudetis
+            </th>
+            <th>
+                Taure
+            </th>
+        </tr>
+        <tr>
+            <td>
+                <i>"Whiskey sour"</i>
+            </td>
+            <td>
+                <ul>
+                <small>
+                <li>Viskis 40ml</li><br>
+                <li>Cukraus sirupas 20ml</li><br>
+                <li>Citrinu sultys 30ml</li><br>
+            </small>
+                </ul>
+            </td>
+            <td>
+                Viskine
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <i>"Old fashioned"</i>
+            </td>
+            <td>
+                <ul>
+                <small>
+                <li>Viskis 60ml</li><br>
+                <li>Cukraus saukstelis</li><br>
+                <li>Angostura bitters 4 dash'ai</li><br>
+            </small>
+                </ul>
+            </td>
+            <td>
+                Viskine
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <i>"Negroni"</i>
+            </td>
+            <td>
+                <ul>
+                <small>
+                <li>Dzinas 25ml</li><br>
+                <li>Martini rosso 25ml</li><br>
+                <li>Campari 25ml</li><br>
+            </small>
+                </ul>
+            </td>
+            <td>
+                Viskine
+            </td>
+        </tr>
+        </table>
+    </section>
+    <section id="images">
+        <a href="https://www.google.com/search?q=whiskey+sour&oq=whiskey+sour&aqs=chrome.0.69i59j46j69i59j0l2j0i271j69i60j69i61.1797j0j15&sourceid=chrome&ie=UTF-8" target="_blank">
+            <h2>
+                <strong>"Whiskey sour"</strong><br>
+                <img src="https://images.unsplash.com/photo-1541546006121-5c3bc5e8c7b9?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=747&q=80" 
+                alt="Whiskey sour" 
+                width="150" 
+                height="auto">
+            </h2>
+        </a>
+        <a href="https://www.google.com/search?q=old+fashioned&sxsrf=ALeKk02s_i-8x2FAtfSa2Ohlg2SFQjpmuA%3A1620308338678&ei=cvGTYNL4KOWHwPAPq7CQgAw&oq=old+fashioned&gs_lcp=Cgdnd3Mtd2l6EAMyCAguEMsBEJMCMgUIABDLATIFCC4QywEyBQgAEMsBOgcIIxCwAxAnOgcIABBHELADOgoILhCwAxDIAxBDOgQIIxAnOgQILhBDOgcILhBDEJMCOggIABCxAxCDAToFCAAQsQM6AgguOgIIADoICAAQxwEQrwFKBQg4EgExULvVB1io5gdgtegHaANwAngAgAFwiAG6CpIBAzkuNZgBAKABAaoBB2d3cy13aXrIAQ7AAQE&sclient=gws-wiz&ved=0ahUKEwjS-c_3lrXwAhXlAxAIHSsYBMAQ4dUDCA4&uact=5" target="blank">
+            <h2>
+                <strong>"Old fashioned"</strong><br>
+                <img src="old-fashioned.jpg" 
+                alt="Old Fashioned" 
+                width="150" 
+                height="auto">
+            </h2>
+        </a>
+        <a href="https://www.google.com/search?q=negroni&sxsrf=ALeKk01yHMBzBtoeOOq1QOrS_EEjXF1eXA%3A1620308467956&ei=8_GTYKPUOaanrgT2u6vwBw&oq=negroni&gs_lcp=Cgdnd3Mtd2l6EAMyCAguEMsBEJMCMgQIABBDMgUIABDLATIFCAAQywE6BwgAEEcQsAM6BwgAELADEEM6DQguELADEMgDEEMQkwI6CgguELADEMgDEEM6BAgjECc6BAguEEM6BwguEEMQkwI6AggAOgUILhDLAUoFCDgSATFQl-QHWN_qB2Ci7gdoA3ACeACAAW6IAfgFkgEDNi4ymAEAoAEBqgEHZ3dzLXdpesgBD8ABAQ&sclient=gws-wiz&ved=0ahUKEwjjmaK1l7XwAhWmk4sKHfbdCn4Q4dUDCA4&uact=5" target="blank">
+            <h2>
+                <strong>"Negroni"</strong><br>
+                <img src="Negroni.jpg" 
+                alt="Negroni" 
+                width="150" 
+                height="auto">
+            </h2>
+        </a>
+    </section>
 
-<h2>Iveskite savo vartotojo varda
-
+<h2>
+    Iveskite savo vartotojo varda
 </h2>
-
-<form action="/action_page.php">
-  <label for="fname">Vartotojo vardas:</label><br>
-  <input type="text" id="fname" name="fname"><br><br>
-  <input type="submit" value="Submit">
-</form>
-   
+<footer>
+    <form action="/action_page.php">
+    <label for="fname">Vartotojo vardas:</label><br>
+    <input type="text" id="fname" name="fname"><br><br>
+    <input type="submit" value="Submit">
+    </form>
+</footer>
 </body>
 </html>
