--- a/namu-darbas.html
+++ b/namu-darbas.html
@@ -97,25 +97,25 @@
                 <strong>"Whiskey sour"</strong><br>
                 <img src="https://images.unsplash.com/photo-1541546006121-5c3bc5e8c7b9?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=747&q=80" 
                 alt="Whiskey sour" 
-                width="150" 
+                width="200" 
                 height="auto">
             </h2>
         </a>
         <a href="https://www.google.com/search?q=old+fashioned&sxsrf=ALeKk02s_i-8x2FAtfSa2Ohlg2SFQjpmuA%3A1620308338678&ei=cvGTYNL4KOWHwPAPq7CQgAw&oq=old+fashioned&gs_lcp=Cgdnd3Mtd2l6EAMyCAguEMsBEJMCMgUIABDLATIFCC4QywEyBQgAEMsBOgcIIxCwAxAnOgcIABBHELADOgoILhCwAxDIAxBDOgQIIxAnOgQILhBDOgcILhBDEJMCOggIABCxAxCDAToFCAAQsQM6AgguOgIIADoICAAQxwEQrwFKBQg4EgExULvVB1io5gdgtegHaANwAngAgAFwiAG6CpIBAzkuNZgBAKABAaoBB2d3cy13aXrIAQ7AAQE&sclient=gws-wiz&ved=0ahUKEwjS-c_3lrXwAhXlAxAIHSsYBMAQ4dUDCA4&uact=5" target="blank">
             <h2>
                 <strong>"Old fashioned"</strong><br>
-                <img src="old-fashioned.jpg" 
+                <img src="images/Old fashionedjpg.jpg" 
                 alt="Old Fashioned" 
-                width="150" 
+                width="200" 
                 height="auto">
             </h2>
         </a>
         <a href="https://www.google.com/search?q=negroni&sxsrf=ALeKk01yHMBzBtoeOOq1QOrS_EEjXF1eXA%3A1620308467956&ei=8_GTYKPUOaanrgT2u6vwBw&oq=negroni&gs_lcp=Cgdnd3Mtd2l6EAMyCAguEMsBEJMCMgQIABBDMgUIABDLATIFCAAQywE6BwgAEEcQsAM6BwgAELADEEM6DQguELADEMgDEEMQkwI6CgguELADEMgDEEM6BAgjECc6BAguEEM6BwguEEMQkwI6AggAOgUILhDLAUoFCDgSATFQl-QHWN_qB2Ci7gdoA3ACeACAAW6IAfgFkgEDNi4ymAEAoAEBqgEHZ3dzLXdpesgBD8ABAQ&sclient=gws-wiz&ved=0ahUKEwjjmaK1l7XwAhWmk4sKHfbdCn4Q4dUDCA4&uact=5" target="blank">
             <h2>
                 <strong>"Negroni"</strong><br>
-                <img src="Negroni.jpg" 
+                <img src="https://images.unsplash.com/photo-1551751299-1b51cab2694c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=755&q=80" 
                 alt="Negroni" 
-                width="150" 
+                width="200" 
                 height="auto">
             </h2>
         </a>
