Changed image names
Changed image names to match w3 validator.

--- a/namu-darbas.html
+++ b/namu-darbas.html
@@ -104,7 +104,7 @@
         <a href="https://www.google.com/search?q=old+fashioned&sxsrf=ALeKk02s_i-8x2FAtfSa2Ohlg2SFQjpmuA%3A1620308338678&ei=cvGTYNL4KOWHwPAPq7CQgAw&oq=old+fashioned&gs_lcp=Cgdnd3Mtd2l6EAMyCAguEMsBEJMCMgUIABDLATIFCC4QywEyBQgAEMsBOgcIIxCwAxAnOgcIABBHELADOgoILhCwAxDIAxBDOgQIIxAnOgQILhBDOgcILhBDEJMCOggIABCxAxCDAToFCAAQsQM6AgguOgIIADoICAAQxwEQrwFKBQg4EgExULvVB1io5gdgtegHaANwAngAgAFwiAG6CpIBAzkuNZgBAKABAaoBB2d3cy13aXrIAQ7AAQE&sclient=gws-wiz&ved=0ahUKEwjS-c_3lrXwAhXlAxAIHSsYBMAQ4dUDCA4&uact=5" target="blank">
             <h2>
                 <strong>"Old fashioned"</strong><br>
-                <img src="images/Old fashionedjpg.jpg" 
+                <img src="images/Old-fashionedjpg.jpg" 
                 alt="Old Fashioned" 
                 width="200" 
                 height="auto">
