Small update to Kontaktai.html homework
Added submit input and added line breaks <br>

--- a/Kontaktai.html
+++ b/Kontaktai.html
@@ -25,6 +25,7 @@
           text-align: center;
           color: white;
 
+        /*Contacts*/
         } 
         .footer {
           text-align: center;
@@ -44,27 +45,30 @@
         <label>El.Pastas *</label>
         <input type="email" required 
         placeholder="iveskite el. pasta"/>
-      </div>
+      </div><br>
       <div>
         <label>Vardas</label>
         <input type="text" required
         placeholder="vardas"/>
-      </div>
+      </div><br>
       <div>
         <label>Pavarde</label>
         <input type="text" required
         placeholder="pavarde"/>
-      </div>
+      </div><br>
       <div>
         <label>Telefono numeris</label>
         <input type="number" required
         placeholder="iveskite tel. nr."/>
-      </div>
+      </div><br>
       <div>
         <label>Asmenu kiekis</label>
         <input type="number" required
         placeholder="kiekis"/>
-        </div>
+      </div><br>
+      <div>
+        <input type="submit" value="Submit">
+      </div>
     </div>
     <div class="footer">
       <h1>Kontaktai</h1>
