Added external css file

--- a/Kontaktai.html
+++ b/Kontaktai.html
@@ -6,31 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Rezervacija ir kontaktai">
-    <style>
-        /* Style the body */
-        body {
-          font-family: Arial;
-          margin: 0;
-          background: #010706;
-        } 
-        /* Header/Logo Title */
-        .header {
-          padding: 30px;
-          text-align: center;
-          color: white;
-          font-size: 15px;
-        }
-        /*Registration form */
-        .forms {
-          text-align: center;
-          color: white;
-        } 
-        /*Contacts*/
-        .footer {
-          text-align: center;
-          color: white;
-        } 
-        </style>
+    <link rel="stylesheet" href="assets/styles.css">
 </head>
   <body>
     <div class="header">
