Fixed form and tabs and so on

--- a/Kontaktai.html
+++ b/Kontaktai.html
@@ -14,6 +14,7 @@
       <h1>Rezervacija</h1>
       <p>Restorano staliuku rezervacija, bei kontaktai</p>
     </div>
+    <form class="" action="" method="">
     <div class="forms">
       <div>
         <label>El.Pastas *</label>
@@ -34,7 +35,8 @@
         <label>Telefono numeris</label>
         <input type="number" required
         placeholder="iveskite tel. nr."/>
-      </div><br>
+      </div><br>thx m8
+      
       <div>
         <label>Asmenu kiekis</label>
         <input type="number" required
@@ -44,6 +46,7 @@
         <input type="submit" value="Submit">
       </div>
     </div>
+  </form>
     <div class="footer">
       <h1>Kontaktai</h1>
       <p>Jei kyla klausimu susisiekite su mumis:</p>
