--- a/Kontaktai.html
+++ b/Kontaktai.html
@@ -1,75 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <title>Rezervacija</title>  
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Rezervacija ir kontaktai">
-    <link rel="stylesheet" href="assets/styles.css">
-</head>
+  <head>
+    <title>Rezervacija</title>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Rezervacija ir kontaktai" />
+    <link rel="stylesheet" href="assets/styles.css" />
+  </head>
   <body>
     <div class="header">
-      <img src="images/logo.jpg" alt="logo"/>
+      <img src="images/logo.jpg" alt="logo" />
       <h1>Rezervacija</h1>
       <p>Restorano staliuku rezervacija, bei kontaktai</p>
     </div>
     <form class="" action="" method="">
-    <div class="forms">
-      <div>
-        <label>El.Pastas *</label>
-        <input type="email" required 
-        placeholder="iveskite el. pasta"/>
-      </div><br>
-      <div>
-        <label>Vardas</label>
-        <input type="text" required
-        placeholder="vardas"/>
-      </div><br>
-      <div>
-        <label>Pavarde</label>
-        <input type="text" required
-        placeholder="pavarde"/>
-      </div><br>
-      <div>
-        <label>Telefono numeris</label>
-        <input type="number" required
-        placeholder="iveskite tel. nr."/>
-      </div><br>thx m8
-      
-      <div>
-        <label>Asmenu kiekis</label>
-        <input type="number" required
-        placeholder="kiekis"/>
-      </div><br>
-      <div>
-        <input type="submit" value="Submit">
+      <div class="forms">
+        <div>
+          <label>El.Pastas *</label>
+          <input type="email" required placeholder="iveskite el. pasta" />
+        </div>
+        <br />
+        <div>
+          <label>Vardas</label>
+          <input type="text" required placeholder="vardas" />
+        </div>
+        <br />
+        <div>
+          <label>Pavarde</label>
+          <input type="text" required placeholder="pavarde" />
+        </div>
+        <br />
+        <div>
+          <label>Telefono numeris</label>
+          <input type="number" required placeholder="iveskite tel. nr." />
+        </div>
+        <br />
+
+        <div>
+          <label>Asmenu kiekis</label>
+          <input type="number" required placeholder="kiekis" />
+        </div>
+        <br />
+        <div>
+          <input type="submit" value="Submit" />
+        </div>
       </div>
-    </div>
-  </form>
+    </form>
     <div class="footer">
       <h1>Kontaktai</h1>
       <p>Jei kyla klausimu susisiekite su mumis:</p>
       <div>
         <ul>
           <li>
-            <a href="mailto:pub@info.lt" target="_blank"> 
-              pub@info.lt
-            </a>
+            <a href="mailto:pub@info.lt" target="_blank"> pub@info.lt </a>
           </li>
           <li>
-            <a href="tel:+37061444244" target="_blank">
-              +37061444244
-            </a>
+            <a href="tel:+37061444244" target="_blank"> +37061444244 </a>
           </li>
           <li>
-            <a href="https://www.google.com/maps/search/republic/@54.9336668,23.8713869,12z/data=!3m1!4b1" target="_blank">
+            <a
+              href="https://www.google.com/maps/search/republic/@54.9336668,23.8713869,12z/data=!3m1!4b1"
+              target="_blank"
+            >
               Google maps nuoroda
             </a>
           </li>
         </ul>
       </div>
-    </div> 
+    </div>
   </body>
 </html>
-        
