--- a/Kontaktai.html
+++ b/Kontaktai.html
@@ -48,7 +48,7 @@
       </div>
     </form>
     <div class="footer">
-      <h1>Kontaktai</h1>
+      <h2>Kontaktai</h2>
       <p>Jei kyla klausimu susisiekite su mumis:</p>
       <div>
         <ul>
@@ -60,7 +60,7 @@
           </li>
           <li>
             <a
-              href="https://www.google.com/maps/search/republic/@54.9336668,23.8713869,12z/data=!3m1!4b1"
+              href="https://www.google.com/maps/place/rePUBlic+No.3/@54.8966081,23.8872602,17z/data=!3m1!4b1!4m5!3m4!1s0x46e7220fb66a34cb:0xd6f18a0f89371be8!8m2!3d54.8966081!4d23.8894489"
               target="_blank"
             >
               Google maps nuoroda
